# ghermez-with-yt-dlp

./: .gitignore  .ruff.toml  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  clear.py  contributing.md  installer-win-x64.iss  installer-win-x86.iss  pyproject.toml  requirements.txt  setup.py  uninstall.py  version.py
.github/: ISSUE_TEMPLATE
.github/workflows/: linters.yml
archlinux/: PKGBUILD
ghermez/: __init__.py  ghermez.pyi
linux/archlinux/: PKGBUILD
linux/xdg/: com.github.iamrezamousavi.ghermez.appdata.xml
man/: ghermez.1
persepolis/: Persepolis Download Manager.py  __init__.py  __main__.py  persepolis_download_manager.py
persepolis/constants/: Browser.py  Os.py  __init__.py  browser.py  os.py  status.py
persepolis/gui/: __init__.py  about_ui.py  addlink_ui.py  after_download_ui.py  customized_widgets.py  log_window_ui.py  mainwindow_ui.py  palettes.py  progress_ui.py  setting_ui.py  text_queue_ui.py  video_finder_progress_ui.py  windows_notification_ui.py
persepolis/scripts/: __init__.py  about.py  addlink.py  after_download.py  browser_integration.py  browser_plugin_queue.py  bubble.py  check_proxy.py  compatibility.py  data_base.py  download.py  error_window.py  globals.py  initialization.py  log_window.py  logger.py  mac_notification.py  mainwindow.py  (+17 more)
resources/: ghermez-with-text.ai  ghermez.ai  resources.qrc  resources_generator.sh
src/: aria2c.rs  database.rs  initialization.rs  lib.rs  logger.rs  os_command.rs  response.rs  startup.rs  useful_tools.rs
test/: test.py
xdg/: com.github.iamrezamousavi.ghermez.desktop
