[package]
name = "ghermez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ghermez"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pyo3-log = "0.8.3"
log = "0.4.20"
aria2-ws = { path = "./aria2-ws" }
tokio = { version = "1.32.0", features = ["full"] }
once_cell = "1.18.0"
serde_json = "1.0.106"
chrono = "0.4.30"
rusqlite = { version = "0.29.0", features = ["bundled", "trace"] }
home = "0.5.5"
regex = "1.9.5"
psutil = "3.2.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.51"
